---
references:
  - "File: /src"
  - |+
    Reference: <skills>
    Here is a list of skills that contain domain specific knowledge on a variety of topics.
    Each skill comes with a description of the topic and a file path that contains the detailed instructions.
    When a user asks you to perform a task that falls within the domain of a skill, use the #tool:read/readFile tool to acquire the full instructions from the file URI.
    <skill>
    <name>agent-customization</name>
    <description>**WORKFLOW SKILL** — Create, update, review, fix, or debug VS Code agent customization files (.instructions.md, .prompt.md, .agent.md, SKILL.md, copilot-instructions.md, AGENTS.md). USE FOR: saving coding preferences; troubleshooting why instructions/skills/agents are ignored or not invoked; configuring applyTo patterns; defining tool restrictions; creating custom agent modes or specialized workflows; packaging domain knowledge; fixing YAML frontmatter syntax. DO NOT USE FOR: general coding questions (use default agent); runtime debugging or error diagnosis; MCP server configuration (use MCP docs directly); VS Code extension development. INVOKES: file system tools (read/write customization files), ask-questions tool (interview user for requirements), subagents for codebase exploration. FOR SINGLE OPERATIONS: For quick YAML frontmatter fixes or creating a single file from a known pattern, edit the file directly — no skill needed.</description>
    <file>c:\Users\cleme\AppData\Local\Programs\Microsoft VS Code\034f571df5\resources\app\extensions\copilot\assets\prompts\skills\agent-customization\SKILL.md</file>
    </skill>
    </skills>


    <agents>
    Here is a list of agents that can be used when running a subagent.
    Each agent has optionally a description with the agent's purpose and expertise. When asked to run a subagent, choose the most appropriate agent from this list.
    Use the #tool:agent/runSubagent tool with the agent name to run the subagent.
    <agent>
    <name>Explore</name>
    <description>Fast read-only codebase exploration and Q&A subagent. Prefer over manually chaining multiple search and file-reading operations to avoid cluttering the main conversation. Safe to call in parallel. Specify thoroughness: quick, medium, or thorough.</description>
    <argumentHint>Describe WHAT you're looking for and desired thoroughness (quick/medium/thorough)</argumentHint>
    </agent>
    </agents>

generationTime: 2026-05-05T07:58:55.133Z
id: 38b5f28a-985b-4a57-a4b7-ec05c0dfd7ad
---
classDiagram
    class Corpus {
        +str nom
        +int occurrences
        +compter()
    }
    class Personnage {
        +list attributs
        +str|None genre
        +identifier()
        +afficher()
    }
    class Lieu {
        +str|None categorie
        +identifier()
        +afficher()
    }
    class Evenement {
        +str|None date
        +str|None heure
        +Lieu|None lieu
        +list participants
        +__str__()
        +identifier()
        +afficher()
    }
    Corpus <|-- Personnage
    Corpus <|-- Lieu
    Corpus <|-- Evenement
    Evenement --> Lieu : lieu
    Evenement --> Personnage : participants

    class DecoupeurTexte {
        +lecture(doc: Doc)
    }
    class DecoupeMots {
        +lecture(doc: Doc): list
    }
    class DecoupePhrases {
        +lecture(doc: Doc): list
    }
    DecoupeurTexte <|-- DecoupeMots
    DecoupeurTexte <|-- DecoupePhrases

    class Texte {
        -_titre: str
        -_auteur: str
        -_annee: str
        +contenu: str
        +__str__()
        +titre()
        +annee()
        +auteur()
    }
    class ChargeurTexte {
        +charger(source: str): Texte
    }
    ChargeurTexte --> Texte

    class AnalyseTexte {
        -personnages: list
        -lieux: list
        -evenements: list
        +analyser(doc: Doc)
        +_ajouter_personnage(nom, doc)
        +_ajouter_lieu(nom)
        +_ajouter_events(doc)
    }
    AnalyseTexte --> Personnage
    AnalyseTexte --> Lieu
    AnalyseTexte --> Evenement

    class Pipeline {
        -source: str
        -_chargeur: ChargeurTexte
        -_finder: AnalyseTexte
        +executer()
    }
    Pipeline --> ChargeurTexte
    Pipeline --> AnalyseTexte

    class Utils {
        +spacy_conv(texte: Texte): Doc
        +nettoyer(txt: str): str
    }
    AnalyseTexte ..> Utils
    Pipeline ..> Utils

    class Exportateur